docs: add delete opening docs
